Small monitors gap fix

--- a/src/Landing/styles.css
+++ b/src/Landing/styles.css
@@ -35,7 +35,7 @@
     margin-bottom: 100px;
 
     display: flex;
-    gap: 300px;
+    gap: 250px;
     align-items: center;
     justify-content: center;
 }
